Custom Cursor Z-index issue resolved

--- a/css/style.css
+++ b/css/style.css
@@ -197,7 +197,7 @@ a.HamBurger span:nth-child(3) {
   border: 2px solid #fff;
   width: 50px;
   height: 50px;
-  z-index: 1;
+  z-index: 500;
   opacity: 0.6;
 }
 .cursor:nth-child(2) {
